--- a/frontend/ecommerce/src/index.html
+++ b/frontend/ecommerce/src/index.html
@@ -7,7 +7,7 @@
   <title>Ecommerce</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/Logotype.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/Logotype.jpg">
 
   <!-- Bootstrap Core CSS -->
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
