--- a/frontend/ecommerce/src/index.html
+++ b/frontend/ecommerce/src/index.html
@@ -43,6 +43,10 @@
   <!--Custom JavaScript -->
   <script src="assets/js/custom.js"></script>
 
+  <script 
+  src="https://www.paypal.com/sdk/js?client-id=AUQqXbVfYFr0Y0MjMuqGr38EEvaZ4DOhZ0aMi65Ii7Plxiq0zWey6yeM44hlWpUhBkv7xLXl-X865Ixt&currency=USD">
+  </script>
+
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
